--- a/AN/index.html
+++ b/AN/index.html
@@ -2828,4 +2828,5 @@ Base: v1.2A14
 Changes:
 - Small version label under the logo (matches APP_VERSION).
 - Install button resized to match View Calendar button height and fill its grid slot.
+- Easter Egg implemented for version A17
 -->
